# metro_gazebo_plugins

./: .pre-commit-config.yaml  README.md
collision_msgs/: CMakeLists.txt  package.xml
collision_msgs/msg/: Collision.msg  Collisions.msg
gazebo_base2d_plugin/: CMakeLists.txt  package.xml
gazebo_base2d_plugin/include/gazebo_base2d_plugin/: gazebo_base2d_plugin.hpp
gazebo_base2d_plugin/src/: gazebo_base2d_plugin.cpp
gazebo_collision_plugin/: CMakeLists.txt  package.xml
gazebo_collision_plugin/include/gazebo_collision_plugin/: gazebo_collision_plugin.hpp
gazebo_collision_plugin/src/: gazebo_collision_plugin.cpp
