<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gazebo_base2d_plugin</name>
  <version>0.0.0</version>
  <description>Use forward kinematics on to move an object in 2.5D</description>
  <maintainer email="davidvlu@gmail.com">David V. Lu!!</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>base2d_kinematics</depend>
  <depend>gazebo_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_2d_utils</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>tf2_ros</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros plugin_path="$(prefix)/../../lib"/>
  </export>
</package>
